--- a/event.html
+++ b/event.html
@@ -58,7 +58,7 @@
           document.getElementById("events").innerHTML = new XMLSerializer().serializeToString(resultDocument);
         }
       };
-      xslt.open("GET", "https://drive.google.com/file/d/1KfUdg717LVSxW3BZCR4Mb08BBs8PpKzI/export?format=xml", true); 
+      xslt.open("GET", "https://github.com/willglenners/diarycode/event.xslt", true); 
       xslt.send();
     }
   </script>
